// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/PostMarkdown plugin hooks can build upon other hook message updates 1`] = `
<Connect(Markdown)
  channelNamesMap={
    Object {
      "test": Object {
        "display_name": "Test",
      },
    }
  }
  imageProps={Object {}}
  isRHS={false}
  mentionKeys={
    Array [
      "a",
      "b",
      "c",
    ]
  }
  message="hello world!"
  options={
    Object {
      "disableGroupHighlight": false,
      "mentionHighlight": true,
    }
  }
  proxyImages={true}
/>
`;

exports[`components/PostMarkdown plugin hooks can overwrite other hooks messages 1`] = `
<Connect(Markdown)
  channelNamesMap={
    Object {
      "test": Object {
        "display_name": "Test",
      },
    }
  }
  imageProps={Object {}}
  isRHS={false}
  mentionKeys={
    Array [
      "a",
      "b",
      "c",
    ]
  }
  message="world!"
  options={
    Object {
      "disableGroupHighlight": false,
      "mentionHighlight": true,
    }
  }
  proxyImages={true}
/>
`;

exports[`components/PostMarkdown should correctly pass postId down 1`] = `
<Connect(Markdown)
  imageProps={Object {}}
  isRHS={false}
  mentionKeys={
    Array [
      "a",
      "b",
      "c",
    ]
  }
  message="message"
  options={
    Object {
      "disableGroupHighlight": false,
    }
  }
  postId="post_id"
  proxyImages={true}
/>
`;

exports[`components/PostMarkdown should render header change properly 1`] = `
<Connect(Markdown)
  channelNamesMap={
    Object {
      "test": Object {
        "display_name": "Test",
      },
    }
  }
  imageProps={Object {}}
  isRHS={false}
  mentionKeys={
    Array [
      "a",
      "b",
      "c",
    ]
  }
  message="message"
  options={
    Object {
      "disableGroupHighlight": false,
      "mentionHighlight": true,
    }
  }
  postId="post_id"
  proxyImages={true}
/>
`;

exports[`components/PostMarkdown should render properly with a post 1`] = `
<Connect(Markdown)
  channelNamesMap={
    Object {
      "test": Object {
        "display_name": "Test",
      },
    }
  }
  imageProps={Object {}}
  isRHS={false}
  mentionKeys={
    Array [
      "a",
      "b",
      "c",
    ]
  }
  message="See ~test"
  options={
    Object {
      "disableGroupHighlight": false,
      "mentionHighlight": true,
    }
  }
  proxyImages={true}
/>
`;

exports[`components/PostMarkdown should render properly with an empty post 1`] = `
<Connect(Markdown)
  imageProps={Object {}}
  isRHS={false}
  mentionKeys={
    Array [
      "a",
      "b",
      "c",
    ]
  }
  message="message"
  options={
    Object {
      "disableGroupHighlight": false,
    }
  }
  proxyImages={true}
/>
`;

exports[`components/PostMarkdown should render properly without group highlight on a post 1`] = `
<Connect(Markdown)
  imageProps={Object {}}
  isRHS={false}
  mentionKeys={
    Array [
      "a",
      "b",
      "c",
    ]
  }
  message="No @group highlight"
  options={
    Object {
      "disableGroupHighlight": true,
      "mentionHighlight": true,
    }
  }
  proxyImages={true}
/>
`;

exports[`components/PostMarkdown should render properly without highlight a post 1`] = `
<Connect(Markdown)
  imageProps={Object {}}
  isRHS={false}
  mentionKeys={
    Array [
      "a",
      "b",
      "c",
    ]
  }
  message="No highlight"
  options={
    Object {
      "disableGroupHighlight": false,
      "mentionHighlight": false,
    }
  }
  proxyImages={true}
/>
`;
